Add search engine meta tags

--- a/frontend/templates/frontend/landing_page.html
+++ b/frontend/templates/frontend/landing_page.html
@@ -2,6 +2,12 @@
 
 {% load static %}
 
+{% block head %}
+<meta name="description" content="Searchable archive of data observed using the Stockholm 1-meter Solar Telescope.">
+<meta name="robots" content="nofollow">
+<meta name="keywords" content="SST, Stockholm, solar, telescope, observations, data cube">
+{% endblock %}
+
 {% block full_width_content %}
 
 <div class="container col-6 align-self-center text-center border p-5 bg-white rounded">
