--- a/frontend/templates/frontend/search_results.html
+++ b/frontend/templates/frontend/search_results.html
@@ -1,8 +1,6 @@
 {% extends "frontend/base.html" %}
 
-{% load pagination_controls %}
-{% load format_column_value %}
-{% load static %}
+{% load pagination_controls format_column_value static %}
 
 {% block title %}&mdash; Search results{% endblock %}
 
