--- a/frontend/templates/frontend/base.html
+++ b/frontend/templates/frontend/base.html
@@ -11,6 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {% block head %}
+    {% comment "Default robots directives are to ignore the page completely" %}{% endcomment %}
+    <meta name="robots" content="none">
     {% endblock %}
 
     <style>
@@ -43,7 +45,7 @@
             <div class="container row gx-5">
                 <div id="sidebar" class="col-3 p-4 border-end mw-25 py-5" style="background-color: #efefef">
                     {% block sidebar %}
-                    {% include "frontend/search_sidebar.html" %}
+                    {% include "frontend/sidebar/search_sidebar.html" %}
                     {% endblock %}
                 </div>
 
