--- a/frontend/templates/frontend/pagination_controls.html
+++ b/frontend/templates/frontend/pagination_controls.html
@@ -3,9 +3,13 @@
 {% if paginator.count > 0 %}
 <nav aria-label="Page navigation">
   <ul class="pagination">
-      {% if page_obj.has_previous %}
-        <li class="page-item"><a class="page-link" title="Previous page" href="?{% replace_query_param request 'page' page_obj.previous_page_number %}"><i class="bi bi-arrow-left"></i></a></li>
-      {% endif %}
+      <li class="page-item{% if not page_obj.has_previous %} disabled{% endif %}">
+          {% if page_obj.has_previous %}
+            <a class="page-link" title="Previous page" href="?{% replace_query_param request 'page' page_obj.previous_page_number %}"><i class="bi bi-arrow-left"></i></a>
+          {% else %}
+            <a class="page-link" title="Previous page" href="#"><i class="bi bi-arrow-left"></i></a>
+          {% endif %}
+      </li>
 
       {% for i in paginator.page_range %}
       {% if page_obj.number == i %}
@@ -15,9 +19,13 @@
       {% endif %}
       {% endfor %}
 
-      {% if page_obj.has_next %}
-        <li class="page-item"><a class="page-link" title="Next page" href="?{% replace_query_param request 'page' page_obj.next_page_number %}"><i class="bi bi-arrow-right"></i></a></li>
-      {% endif %}
+      <li class="page-item{% if not page_obj.has_next %} disabled{% endif %}">
+          {% if page_obj.has_next %}
+            <a class="page-link" title="Next page" href="?{% replace_query_param request 'page' page_obj.next_page_number %}"><i class="bi bi-arrow-right"></i></a>
+          {% else %}
+            <a class="page-link" title="Next page" href="#"><i class="bi bi-arrow-right"></i></a>
+          {% endif %}
+      </li>
   </ul>
 </nav>
 {% endif %}
