Add attribution for SST photo

--- a/frontend/templates/frontend/landing_page.html
+++ b/frontend/templates/frontend/landing_page.html
@@ -14,6 +14,8 @@
     <div class="row">
         <div class="col-4">
             <img class="rounded float-start w-100" src="{% static 'frontend/Swedish_Solar_Telescope.jpeg' %}" />
+                    <p class="pt-4"><small class="text-muted">SST photograph by Tim van Werkhoven, released under <a href="https://creativecommons.org/licenses/by-sa/3.0/">Creative Commons License</a>.</small></p>
+
         </div>
 
         <div class="col">
