URL:ize release comment
Let Django identify URLs in the release comment and
make into a clickable link.

--- a/data_access/templates/data_access/access_denied.html
+++ b/data_access/templates/data_access/access_denied.html
@@ -15,7 +15,7 @@
 {% if release_comment %}
 <div class="alert alert-primary">
     <h5>Comment:</h5>
-    <p>{{ release_comment }}</p>
+    <p>{{ release_comment|urlize }}</p>
 </div>
 {% endif %}
 
