Move static images into their own folder

--- a/frontend/templates/frontend/footer.html
+++ b/frontend/templates/frontend/footer.html
@@ -19,7 +19,7 @@
                 <img class="w-100" src="{% static 'frontend/images/eu-logo.jpeg' %}" alt="European Union flag"/>
             </div>
             <div class="col">
-                <p>This Stockholm SST Archive has received funding from the European Union's Horizon 2020 research and innovation programme under grant agreement No 824135.</p>
+                <p>The Stockholm SST Archive has received funding from the European Union's Horizon 2020 research and innovation programme under grant agreement No 824135.</p>
             </div>
         </div>
     </div>
