Tweak CSS for EU project info

--- a/frontend/templates/frontend/footer.html
+++ b/frontend/templates/frontend/footer.html
@@ -18,8 +18,9 @@
             <div class="col-3">
                 <img class="w-100" src="{% static 'frontend/images/eu-logo.jpeg' %}" alt="European Union flag"/>
             </div>
-            <div class="col">
-                <p>The Stockholm SST Archive has received funding from the European Union's Horizon 2020 research and innovation programme under grant agreement No 824135.</p>
+            <div class="col align-self-center">
+                <p>The Stockholm SST Archive has received funding from the European Union's Horizon 2020 research and
+                    innovation programme under grant agreement No 824135.</p>
             </div>
         </div>
     </div>
