Remove auto-subject for contact e-mail

--- a/frontend/templates/frontend/footer.html
+++ b/frontend/templates/frontend/footer.html
@@ -7,7 +7,7 @@
         <p>Have questions, opinions or suggestions about the Stockholm SST Archive?</p>
 
         <p>Feel free to reach out with your questions or feedback to
-            <a href="mailto:{{ contact_email }}?subject=Stockholm SST Archive - Feedback">{{ contact_email }}</a>.
+            <a href="mailto:{{ contact_email }}">{{ contact_email }}</a>.
         </p>
     </div>
 
