Reference SOLARNET in the footer EU proj. info

--- a/frontend/templates/frontend/footer.html
+++ b/frontend/templates/frontend/footer.html
@@ -20,7 +20,7 @@
             </div>
             <div class="col align-self-center">
                 <p>The Stockholm SST Archive has received funding from the European Union's Horizon 2020 research and
-                    innovation programme under grant agreement No 824135.</p>
+                    innovation programme under grant agreement No 824135 (SOLARNET).</p>
             </div>
         </div>
     </div>
