--- a/data_access/templates/data_access/file_not_found.html
+++ b/data_access/templates/data_access/file_not_found.html
@@ -13,7 +13,7 @@
 
     <p>The file <code>{{ filename }}</code> does not exist at the expected location.</p>
 
-    <p>Please <a href="mailto:{{ contact_email }}">contact the system administrator</a> and report this issue.</p>
+    <p>Please <a href="mailto:{{ contact_email }}?subject=Stockholm SST Archive: File not found {{ filename }}">contact the system administrator</a> and report this issue.</p>
 
 </div>
 </div>
