Improve the spectral line profile plot y-label

--- a/frontend/templates/frontend/data_cube_detail/spectral_line_profile_graph.html
+++ b/frontend/templates/frontend/data_cube_detail/spectral_line_profile_graph.html
@@ -71,7 +71,7 @@ window.addEventListener('load', function() {
         forceNiceScale: true,
         decimalsInFloat: 2,
         title: {
-          text: 'TODO',
+          text: 'Mean(Median Intensity per Scan)',
           style: {
               color: undefined,
               fontSize: '12px',
