Replace EU logo with SVG version

--- a/frontend/templates/frontend/footer.html
+++ b/frontend/templates/frontend/footer.html
@@ -15,8 +15,8 @@
         <h4 class="fw-light mt-5 mb-5">EU Project Information</h4>
 
         <div class="row">
-            <div class="col-3">
-                <img class="w-100" src="{% static 'frontend/images/eu-logo.jpeg' %}" alt="European Union flag"/>
+            <div class="col flex-grow-0">
+                <img style="width: 140px" src="{% static 'frontend/images/eu-logo.svg' %}" alt="European Union flag"/>
             </div>
             <div class="col align-self-center">
                 <p>The Stockholm SST Archive has received funding from the European Union's Horizon 2020 research and
