Fix title casing in observation_detail

--- a/frontend/templates/frontend/observation_detail.html
+++ b/frontend/templates/frontend/observation_detail.html
@@ -206,7 +206,7 @@
 
     {% if overlapping_observations %}
     <div class="row mb-5 p-3 gx-0">
-        <h5 class="text-center mb-3">Related observations <a class="bi bi-question-circle" data-bs-toggle="tooltip"
+        <h5 class="text-center mb-3">Related Observations <a class="bi bi-question-circle" data-bs-toggle="tooltip"
          href="#" title="This section shows other observations that have been made at roughly the same time."></a></h5>
 
         <div class="row">
