--- a/frontend/templates/frontend/observation_detail.html
+++ b/frontend/templates/frontend/observation_detail.html
@@ -57,126 +57,7 @@
         </div>
 
         <div class="mb-5 col-6 ">
-            <table class="table" style="table-layout: fixed">
-                <tr>
-                    <td>Features:</td>
-                    <td>
-                        {% for tag in data_cube.tags.all %}
-                        <span class="badge bg-light rounded-pill text-dark">{{ tag }}</span>
-                        {% empty %}
-                        &mdash;
-                        {% endfor %}
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>Observation time (UTC):</td>
-                    <td>
-                        <p>Started {{ date_beg }}</p>
-                        <p>Ended {{ date_end }}.</p>
-                        <p>Total duration: {{ date_end|timeuntil:date_beg }}</p>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>Instrument:</td>
-                    <td>
-                        <ul style="list-style-type: none; padding-left: 0">
-                            {% for instrument in instruments %}
-                            <li>{{ instrument }}</li>
-                            {% endfor %}
-                        </ul>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>Spectral line(s):</td>
-                    <td>
-                        <ul style="list-style-type: none; padding-left: 0">
-                            {% for line in spectral_lines %}
-                            <li>{{ line }}</li>
-                            {% endfor %}
-                        </ul>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>Observer(s):</td>
-                    <td>
-                        <ul style="list-style-type: none; padding-left: 0">
-                            {% for observer in observers %}
-                            <li>{{ observer }}</li>
-                            {% endfor %}
-                        </ul>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>Scans:</td>
-                    <td>{{ total_number_of_scans }}</td>
-                </tr>
-
-                <tr>
-                    <td>Polarimetric:</td>
-                    <td>{% if polarimetric %}Yes{% else %}No{% endif %}</td>
-                </tr>
-
-                <tr>
-                    <td>Average cadence:</td>
-                    <td>
-                        {% if metadata.cadavg %}
-                        {{ metadata.cadavg }} seconds
-                        {% else %}
-                        &mdash;
-                        {% endif %}
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>
-                        Release status:
-                    </td>
-                    <td>
-                        {% if restricted %}
-                        <div class="badge bg-danger rounded-pill" data-bs-toggle="tooltip" data-bs-html="true"
-                             title="<p>This observation data is not publicly available in its entirety.</p><p>{{release_comment}}</p>">
-                            Restricted <i class="bi bi-info-circle-fill"></i>
-                        </div>
-
-                        {% if swedish_data %}
-                        <div class="badge bg-info rounded-pill" data-bs-html="true" data-bs-toggle="tooltip"
-                             title="<p>Access to this observation data is restricted but immediately available to Swedish researchers.</p><p>Gain access by registering a user and specifying that you are based in Sweden.</p>">
-                            Swedish Data
-                        </div>
-                        {% endif %}
-                        {% else %}
-                        <div class="badge bg-success rounded-pill" data-bs-toggle="tooltip" data-bs-html="true"
-                             title="<p>This observation data is publicly available.</p><p>{{release_comment}}</p>">
-                            Publicly Available <i class="bi bi-info-circle-fill"></i>
-                        </div>
-                        {% endif %}
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>FITS cube(s):</td>
-                    <td style="vertical-align: middle">
-                        {% if is_data_cube_group %}
-                        <form action="{% url 'download_multiple_data_cubes' %}">
-                            {{ download_form.as_p }}
-                            <button class="btn btn-primary" type="submit"><i class="bi bi-download"></i> Download
-                                selected
-                            </button>
-                        </form>
-                        {% else %}
-                        <a class="btn btn-primary"
-                           href="{% url 'download_data_cube' data_cube.filename %}"><i
-                                class="bi bi-download"></i> Download FITS data cube ({{data_cube.size|filesizeformat}}
-                            )</a>
-                        {% endif %}
-                    </td>
-                </tr>
-            </table>
+            {% include "frontend/data_cube_detail/observation_attributes.html" %}
         </div>
     </div>
 
@@ -206,78 +87,17 @@
 
     {% if overlapping_observations %}
     <div class="row mb-5 p-3 gx-0">
-        <h5 class="mb-3">Related Observations <a class="bi bi-question-circle" data-bs-toggle="tooltip"
-         href="#" title="This section shows other observations that have been made at roughly the same time."></a></h5>
-
-        <div class="row">
-        {% for overlapping_observation in overlapping_observations %}
-        {% with overlapping_observation.cubes.all|first as overlapping_cube  %}
-        <div class="col flex-grow-0">
-            <div class="card">
-                <a href="{% url 'observation_detail' overlapping_cube.observation.id %}"
-                   style="width: 120px; height: 120px; overflow: hidden">
-                    <img class="card-img-top" src="{{ overlapping_cube.previews.thumbnail.url }}"/>
-                </a>
-                <div class="card-body">
-                    <h5 class="card-title">{{ overlapping_cube.metadata.waveband }}</h5>
-                    <p class="card-text">
-                        <small>
-                        {{ overlapping_cube.instrument.name }} <br>
-                        {{ overlapping_cube.metadata.date_beg.time }} &mdash;
-                        {{ overlapping_cube.metadata.date_end.time }}
-                        </small>
-                    </p>
-                </div>
-            </div>
-        </div>
-        {% endwith %}
-        {% endfor %}
-        </div>
+        {% include "frontend/data_cube_detail/related_observations.html" %}
     </div>
     {% endif %}
 
     <div class="row mb-5">
-        <div class="accordion" id="metadata-accordion">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingOne">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                        All FITS Metadata
-                        {% if is_data_cube_group %}
-                        ({{ metadata.filename }})
-                        {% endif %}
-                    </button>
-                </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
-                     data-bs-parent="#metadata-accordion">
-                    <div class="accordion-body">
-                        <table class="table table-hover col-lg-8" style="table-layout: fixed">
-                            <thead class="thead-light">
-                            <tr>
-                                <th scope="col">Keyword</th>
-                                <th scope="col">Value</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            {% for key, value in metadata_fields.items %}
-                            {% if value is not None %}
-                            <tr>
-                                <th scope="row">{{ key }}</th>
-                                <td class="overflow-auto">{{ value }}</td>
-                            </tr>
-                            {% endif %}
-                            {% endfor %}
-                            </tbody>
-                        </table>
-                        {% else %}
-                        <p>Specified metadata not found.</p>
-                        {% endif %}
-                    </div>
-                </div>
-            </div>
-        </div>
-
+        {% include "frontend/data_cube_detail/fits_metadata.html" %}
     </div>
+
+    {% else %}
+    <p>Specified metadata not found.</p>
+    {% endif %}
 </div>
 
 {% endblock %}
